tests/fixtures/invalid/pow_dict_list_dict.py
# Cannot call pow() with Dict[str, int], List[int], Dict[str, int]
x = pow({"a": 1}, [1, 2, 3], {"a": 1})
